--- a/src/assets/less/login.less
+++ b/src/assets/less/login.less
@@ -17,9 +17,21 @@
 }
 
 .submit-login {
+  margin-top: 30px;
   padding: 6px 30px;
 }
 
 .login-invalid {
   color: #dc3545;
+  margin: 0;
+  margin-top: 15px;
 }
+
+.login-form__expired_session {
+  margin-bottom: 15px;
+}
+
+.login-form__card {
+  margin-bottom: 15px;
+}
+
