--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -9,8 +9,11 @@
   margin-top: 30px;
 }
 
-.finish-session-btn {
+.finish-session-form {
   margin-top: 60px;
+}
+
+.finish-session-btn {
   padding: 5px 30px;
 }
 
