--- a/src/assets/less/transfers.less
+++ b/src/assets/less/transfers.less
@@ -23,6 +23,7 @@
 }
 
 .make-transfer-form__submit-btn {
+  margin-top: 30px;
   padding: 6px 30px;
 }
 
@@ -30,17 +31,13 @@
   margin-bottom: 15px;
 }
 
-.make-transfer-form__amount {
-  margin-bottom: 30px;
-}
-
-.transfers-list {
+.transfer-list {
   list-style: none;
   padding: 0;
   padding-right: 20px;
   margin: 0;
   overflow-y: auto;
-  max-height: 310px;
+  max-height: 330px;
 
   &::-webkit-scrollbar {
     width: 10px;
@@ -63,20 +60,30 @@
     background: #B8B8B8;
   }
 }
+.transfer_list__transfer-type {
+  background-color: #6c757d;
+  border-radius: 0.25rem;
+  color: white;
+  padding: 2px 12px;
+  font-size: 14px;
+  margin-bottom: 7px;
+}
 
-.transfers-list__item-date {
+.transfer-list__item-date {
   color: #D2D2D2;
 }
 
-.transfers-list__item:not(:last-child) {
-  margin-bottom: 15px;
+.transfer-list__item:not(:last-child) {
+  margin-bottom: 20px;
+  border-bottom: 0.5px solid #CECECE;
+  padding-bottom: 20px;
 }
 
-.transfers-list__item-info {
+.transfer-list__item-info {
   margin-bottom: 0;
 }
 
-.transfers-list__item-amount {
+.transfer-list__item-amount {
   font-weight: bold;
 
   &--red {
@@ -88,7 +95,7 @@
   }
 }
 
-.transfers-list__item-date {
+.transfer-list__item-date {
   margin-bottom: 2px;
 }
 
@@ -98,4 +105,20 @@
 
 #transfer-amount {
   width: 250px;
+}
+
+.no-transfers-label {
+  font-size: 20px;
+}
+
+.make-transfer-spinner {
+  width: 17px;
+  height: 17px;
+  margin-left: 10px;
+}
+
+.make-transfer-invalid {
+  margin: 0;
+  margin-top: 15px;
+  color: #dc3545;
 }
