--- a/src/assets/less/withdrawals.less
+++ b/src/assets/less/withdrawals.less
@@ -11,14 +11,12 @@
 }
 
 .make-withdrawal-form__submit-btn {
+  margin-top: 30px;
   padding: 6px 30px;
 }
 
-.make-withdrawal-form__amount {
-  margin-bottom: 30px;
-}
 
-.withdrawals-list {
+.withdrawal-list {
   list-style: none;
   padding: 0;
   padding-right: 20px;
@@ -48,23 +46,39 @@
   }
 }
 
-.withdrawals-list__item p {
+.withdrawal-list__item p {
   color: #D2D2D2;
 }
 
-.withdrawals-list__item:not(:last-child) {
+.withdrawal-list__item:not(:last-child) {
   margin-bottom: 15px;
 }
 
-.withdrawals-list__item p {
+.withdrawal-list__item p {
   margin-bottom: 0;
 }
 
-.withdrawals-list__item p span {
+.withdrawal-list__item p span {
   color: #dc3545;
   font-weight: bold;
 }
 
 #withdrawal-amount {
   width: 250px;
+}
+
+.no-withdrawals-label {
+  font-size: 20px;
+}
+
+.make-withdrawal-spinner {
+  width: 17px;
+  height: 17px;
+  margin-left: 10px;
+}
+
+.make-withdrawal-invalid {
+  margin: 0;
+  margin-top: 15px;
+  color: #dc3545;
 }
