implement regular payments

--- a/src/assets/less/regular-payments.less
+++ b/src/assets/less/regular-payments.less
@@ -12,7 +12,7 @@
 }
 
 .regular-payments__card-list {
-  max-height: 410px;
+  max-height: 434px;
   overflow-y: auto;
 
   &::-webkit-scrollbar {
@@ -89,17 +89,13 @@
 }
 
 .add-regular-payment-modal__submit-btn {
+  margin-top: 30px;
   padding: 6px 30px;
 }
 
 .add-regular-payment-modal__periodicity-title {
   margin-bottom: 0.5rem;
   font-size: 16px;
-}
-
-.add-regular-payment-modal__first-payment-date {
-  margin-bottom: 30px;
-  //width: 300px;
 }
 
 .add-regular-payment-modal__body {
@@ -147,11 +143,6 @@
   font-size: 16px;
 }
 
-.edit-regular-payment-modal__first-payment-date {
-  margin-bottom: 30px;
-  //width: 300px;
-}
-
 .edit-regular-payment-modal__body {
   padding: 30px 90px 50px;
 }
@@ -166,5 +157,55 @@
 }
 
 .no-regular-payments-label {
+  margin-bottom: 90px;
+  margin-top: 30px;
   font-size: 20px;
+}
+
+.add-regular-payment-spinner {
+  width: 17px;
+  height: 17px;
+  margin-left: 10px;
+}
+
+.edit-regular-payment-spinner {
+  width: 17px;
+  height: 17px;
+  margin-left: 10px;
+}
+
+.add-regular-payment-invalid {
+  margin: 0;
+  margin-top: 15px;
+  color: #dc3545;
+}
+
+.edit-regular-payment-invalid {
+  margin: 0;
+  margin-top: 15px;
+  color: #dc3545;
+}
+
+.edit-regular-payment-btns {
+  margin-top: 30px;
+}
+
+.remove-regular-payment-modal__remove-btn {
+  margin-right: 15px;
+  padding: 6px 30px;
+}
+
+.remove-regular-payment-modal__title {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.remove-regular-payment-spinner {
+  width: 17px;
+  height: 17px;
+  margin-left: 10px;
+}
+
+.remove-regular-payment-modal__body {
+  padding: 30px 90px 50px;
 }
